The overflow issue was resolved
The overflow issue was resolved

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@
 
 }
 /* ---------Reset--------- */
-body{
+body, html{
   margin: 0;
-  height: 100vh;
+  height: 100%;
+  overflow: hidden;
+  /* background-color: blueviolet; */
 
   h1, h2, h3, p{
     margin: 0;
